--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://www.example.com/"
+baseURL = "https://pioneers.github.io"
 languageCode = "en-US"
 title = "Pioneers"
 theme = "hago"
